// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimeUnit /> renders correctly with a plural unit 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    dataSet={{}}
    style={
      [
        {},
        {
          "alignItems": "center",
          "paddingLeft": 7,
          "paddingRight": 7,
        },
      ]
    }
  >
    <Text
      dataSet={{}}
      style={
        [
          {
            "backgroundColor": undefined,
            "color": "#171717",
            "fontFamily": undefined,
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 21,
            "textDecorationLine": undefined,
          },
          {
            "color": "white",
            "fontSize": 40,
            "fontWeight": "bold",
          },
        ]
      }
    >
      10
    </Text>
    <Text
      dataSet={{}}
      style={
        [
          {
            "backgroundColor": undefined,
            "color": "#171717",
            "fontFamily": undefined,
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 21,
            "textDecorationLine": undefined,
          },
          {
            "color": "white",
            "fontSize": 20,
          },
        ]
      }
    >
      seconds
    </Text>
  </View>
</RNCSafeAreaProvider>
`;

exports[`<TimeUnit /> renders correctly with a singular unit 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    dataSet={{}}
    style={
      [
        {},
        {
          "alignItems": "center",
          "paddingLeft": 7,
          "paddingRight": 7,
        },
      ]
    }
  >
    <Text
      dataSet={{}}
      style={
        [
          {
            "backgroundColor": undefined,
            "color": "#171717",
            "fontFamily": undefined,
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 21,
            "textDecorationLine": undefined,
          },
          {
            "color": "white",
            "fontSize": 40,
            "fontWeight": "bold",
          },
        ]
      }
    >
      1
    </Text>
    <Text
      dataSet={{}}
      style={
        [
          {
            "backgroundColor": undefined,
            "color": "#171717",
            "fontFamily": undefined,
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 21,
            "textDecorationLine": undefined,
          },
          {
            "color": "white",
            "fontSize": 20,
          },
        ]
      }
    >
      second
    </Text>
  </View>
</RNCSafeAreaProvider>
`;
